<resources>
    <string name="app_name">Salarios SV</string>
    <string name="SplashTitulo1">C A L C U L A D O R A</string>
    <string name="SplashTitulo2">Descuentos de Ley</string>
    <string name="SplashTitulo3">PARA EL SALVADOR</string>
    <string name="Porcentaje">0%</string>
    <string name="IniciarSesion">Iniciar Sesión</string>
    <string name="IniciaSesion">Inicia Sesión</string>
    <string name="Correo">Correo Eléctronico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="LoginP1">¿No tienes cuenta?</string>
    <string name="Registrate">Regístrate</string>
    <string name="LoginP2">¿Olvidaste tu contraseña?</string>
    <string name="Registrarse">Regístrarse</string>
    <string name="NombreApellido">Nombre Apellido</string>
    <string name="ConfirmarContraseña">Confirmar Contraseña</string>
    <string name="RegistrarseP1">¿Ya tienes una cuenta?</string>
    <string name="CambioContraseña">Cambio de Contraseña</string>
    <string name="ActualContraseña">Contraseña Actual</string>
    <string name="NuevaContraseña">Contraseña Nueva</string>
    <string name="CambiarContraseña">Cambiar Contraseña</string>
    <string name="lbCalculoSalario">Cálculo de Salario</string>
    <string name="OpciónCalculo">Cálculo de Salario</string>
    <string name="OpciónHistorico">Historico de Cálculos</string>
    <string name="CerrarSesión">Cerrar Sesión</string>
    <string name="SalarioInput">Ingrese su salario</string>
    <string name="Calcular">Calcular</string>
    <string name="DescripcionDialogo">Si presiona [Si] se guardará el cálculo en la sección de hístoricos</string>
    <string name="TituloDialogo">¿Desea guardar el cálculo?</string>
    <string name="ComboHintMes">Seleccione un mes</string>
    <string name="HistorialTexto">Historial: 00/00/0000</string>
    <string name="SalarioLiquidoM">Salario Líquido Mensual</string>
    <string name="SalarioLiquidoQ">Salario Líquido Quincenal</string>
    <string name="SalarioBruto">Salario Bruto</string>
    <string name="TipoDeContrato">Tipo de Contrato</string>
    <string name="Descuentos">Descuentos</string>
    <string name="USD">USD</string>
    <string name="DineroTexto">$ 0000.00</string>
    <string name="OtraCantidad">- $ 00.00</string>
    <string name="AFP">AFP</string>
    <string name="ISSS">ISSS</string>
    <string name="Renta">Renta</string>
    <string name="AFP_Porcentaje">7.25%</string>
    <string name="ISSS_Porcentaje">3.00%</string>
    <string name="Porcentaje2">00.00%</string>
    <string name="ResultadoTexto">Resultado</string>
    <string name="RestablecerContra">Restablecer Contraseña</string>
    <string name="RestablecerContraEmail">Ingrese su Email</string>
    <string name="RestablecerContraTexto">Restablecer Contraseña</string>
    <string name="VolverLogin">Volver al Login</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>