<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AquaSuave"
    tools:context=".Registrarse">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_decoracion_peque" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/roboto_slab"
        android:linksClickable="true"
        android:text="@string/RegistrarseP1"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegistrar" />

    <TextView
        android:id="@+id/txtIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/roboto_slab"
        android:linksClickable="true"
        android:text="@string/IniciaSesion"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/boton_ovalado"
        android:text="@string/Registrarse"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/BlancoSuave"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarContrasena" />

    <EditText
        android:id="@+id/txtConfirmarContrasena"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_ovalado"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="-30dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/ConfirmarContraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textColorHint="@color/GrisSuave"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasenaRegistrar" />

    <EditText
        android:id="@+id/txtContrasenaRegistrar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_ovalado"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="-30dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/Contraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textColorHint="@color/GrisSuave"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCorreoRegistrar" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/Registrarse"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10" />

    <EditText
        android:id="@+id/txtNombreApellido"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_ovalado"
        android:drawableLeft="@drawable/ic_baseline_person_24"
        android:drawablePadding="-30dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/NombreApellido"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textColorHint="@color/GrisSuave"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <EditText
        android:id="@+id/txtCorreoRegistrar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_ovalado"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="-30dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textColorHint="@color/GrisSuave"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreApellido" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/SplashTitulo3"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="78dp"
        android:layout_height="77dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_loguito" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/SplashTitulo1"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/SplashTitulo2"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_decoracion_peque" />
</androidx.constraintlayout.widget.ConstraintLayout>