<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/AquaSuave"
    tools:context=".CambioContrasena">

    <Button
        android:id="@+id/btnIniciarSesion3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="90dp"
        android:background="@drawable/boton_ovalado"
        android:text="@string/CambiarContraseña"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/BlancoSuave"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarContraseña3" />

    <EditText
        android:id="@+id/txtAntiguaContra"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_ovalado"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="-30dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/ActualContraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textColorHint="@color/GrisSuave"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <EditText
        android:id="@+id/txtConfirmarContraseña2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_ovalado"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="-30dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/NuevaContraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textColorHint="@color/GrisSuave"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAntiguaContra" />

    <EditText
        android:id="@+id/txtConfirmarContraseña3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_ovalado"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawablePadding="-30dp"
        android:ems="10"
        android:fontFamily="@font/roboto_light"
        android:hint="@string/ConfirmarContraseña"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:textAlignment="center"
        android:textColor="@color/Negro"
        android:textColorHint="@color/GrisSuave"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmarContraseña2" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_decoracion_peque" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/CambioContraseña"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/SplashTitulo3"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/SplashTitulo1"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="78dp"
        android:layout_height="77dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_loguito" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/SplashTitulo2"
        android:textColor="@color/Blanco"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_decoracion_peque" />
</androidx.constraintlayout.widget.ConstraintLayout>